# Lipi-IME-Flutter

./: .gitignore  AI_CONTEXT.md  FocusLogger.ps1  LipiIME.slnx  Spy.cs  UIAutomationLogger.ps1  api.py  gui.py  main.py  portableDev.bat  requirements.txt  zip_repo.ps1
.agents/: AGENTS.md
LipiDashboard/: App.xaml  App.xaml.cs  LipiDashboard.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SettingsManager.cs  app.manifest
LipiDashboard/Properties/: launchSettings.json
LipiService/: CandidateWindow.xaml  CandidateWindow.xaml.cs  LipiService.csproj  Program.cs  runtimeconfig.template.json
LipiService/Services/: ApiService.cs  AvroPhonetic.cs  CacheManager.cs  NamedPipeServerManager.cs  SettingsManager.cs
Solution Box Of Other AI/LipiDashboard/: MainWindow.xaml.cs  SettingsManager.cs
Solution Box Of Other AI/LipiIME_FocusBlock/LipiDashboard/: MainWindow.xaml
Solution Box Of Other AI/LipiIME_LiquidGlass/LipiDashboard/: MainWindow.xaml  MainWindow.xaml.cs  SettingsManager.cs
Solution Box Of Other AI/LipiIME_LiquidGlass/LipiService/: CandidateWindow.xaml.cs
flutter_app/: download_audio.ps1  test_win32.dart
flutter_app/lib/: main.dart
flutter_app/windows/: CMakeLists.txt
flutter_app/windows_tsf_core/: CMakeLists.txt
flutter_app/windows_tsf_core/src/: ClassFactory.cpp  DllMain.cpp  LipiTSF.cpp  LipiTSF.h
legacy_flutter/: pubspec.yaml
legacy_flutter/lib/: main.dart
windows_tsf_core/: LipiTSF.def
windows_tsf_core/src/: Globals.cpp  Globals.h  IpcClient.cpp  IpcClient.h  LipiTSF.cpp  LipiTSF.h  Register.cpp
(+23 files in other folders)
